--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,8 +42,8 @@ alloy-sol-types  = { version = "0.8", features = ["json"] }
 futures = "0.3"
 futures-util = "0.3"
 tokio = { version = "1.0", features = ["full"] }
-tokio-stream = "0.1"
-tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
+reqwest = { version = "0.12", features = ["blocking"] }
+bytes = { version = "1" }
 
 # da-server
 axum = { version = "0.7" }
