--- a/da-exex/Cargo.toml
+++ b/da-exex/Cargo.toml
@@ -12,10 +12,16 @@ reth-node-api.workspace = true
 reth-node-ethereum.workspace = true
 reth-tracing.workspace = true
 reth-execution-types.workspace = true
-
+reth-primitives.workspace = true
 eyre.workspace = true
 futures.workspace = true
 serde_json.workspace = true
+reqwest.workspace = true
+alloy-rlp.workspace = true
+futures-util.workspace = true
+dotenvy.workspace = true
+bytes.workspace = true
+tokio.workspace = true
 
 [dev-dependencies]
 reth-exex-test-utils.workspace = true
