--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,3 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio.workspace = true
+alloy.workspace = true
+alloy-consensus.workspace = true
+alloy-primitives.workspace = true
+alloy-provider.workspace = true
+alloy-signer.workspace = true
+alloy-signer-local.workspace = true
+alloy-transport-http.workspace = true
+futures.workspace = true
+clap.workspace = true
+anyhow.workspace = true
+serde_json.workspace = true
+reqwest.workspace = true
+serde.workspace = true
