--- a/smt-server/Cargo.toml
+++ b/smt-server/Cargo.toml
@@ -6,7 +6,7 @@ rust-version.workspace = true
 license.workspace = true
 
 [dependencies]
-alloy-primitives.workspace = true
+alloy.workspace = true
 axum.workspace = true
 tokio.workspace = true
 serde_json.workspace = true
