--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,7 +1,9 @@
 [package]
 name = "cli"
 version = "0.1.0"
-edition = "2021"
+edition.workspace = true
+rust-version.workspace = true
+license.workspace = true
 
 [dependencies]
 tokio.workspace = true
